[gd_scene load_steps=2 format=2]

[ext_resource path="res://Menus/PauseMenu.gd" type="Script" id=1]

[node name="PauseMenu" type="Node2D"]
script = ExtResource( 1 )

[node name="Background" type="ColorRect" parent="."]
margin_right = 1024.0
margin_bottom = 640.0
color = Color( 0.278431, 0.278431, 0.278431, 1 )

[node name="MenuTitle" type="RichTextLabel" parent="."]
margin_left = 488.0
margin_top = 152.0
margin_right = 544.0
margin_bottom = 184.0
text = "Menu"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 416.0
margin_top = 256.0
margin_right = 608.0
margin_bottom = 320.0

[node name="SaveButton" type="Button" parent="VBoxContainer"]
margin_right = 192.0
margin_bottom = 30.0
text = "Save"

[node name="QuitButton" type="Button" parent="VBoxContainer"]
margin_top = 34.0
margin_right = 192.0
margin_bottom = 64.0
text = "Quit To Title"

[node name="CloseButton" type="Button" parent="VBoxContainer"]
margin_top = 68.0
margin_right = 192.0
margin_bottom = 98.0
text = "Close"

[connection signal="pressed" from="VBoxContainer/SaveButton" to="." method="_on_SaveButton_pressed"]
[connection signal="pressed" from="VBoxContainer/QuitButton" to="." method="_on_QuitButton_pressed"]
[connection signal="pressed" from="VBoxContainer/CloseButton" to="." method="_on_CloseButton_pressed"]
